tests/compiletests/ui/spirv-attr/invalid-matrix-type-empty.stderr
error: #[spirv(matrix)] type must have at least two fields
 --> $DIR/invalid-matrix-type-empty.rs:8:1
  |
8 | pub struct EmptyStruct {}
  | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

